Remove network access and re-enable test